fixed aboutme section overlap with skills section when above 700px

--- a/css/style.css
+++ b/css/style.css
@@ -55,8 +55,7 @@ h2 {
     font-size: 2.750em;
     font-weight: 900;
     line-height: 1em;
-    /* padding-top: 60px; */
-    
+    /* padding-top: 60px; */ 
 }
 
 
@@ -159,6 +158,11 @@ nav ul li a:hover, #navbar ul li.current a {
         
     }
 
+    p {
+        font-size: .8em;
+
+    }
+
     #landing {
         display: grid;
         grid-template-rows: 90vh 10vh;
@@ -189,7 +193,7 @@ nav ul li a:hover, #navbar ul li.current a {
 
     #aboutme .container .section-content{
         display: grid;
-        grid-template-columns: 25vw 70vw;
+        grid-template-columns: 30vw auto;
         justify-items: center;
         align-items: center;
     }
